# electronics_retail_chain

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
retail_chain/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
retail_chain/migrations/: 0001_initial.py  0002_hierarchyelement_country.py  0003_hierarchyelement_city.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py
users/migrations/: 0001_initial.py
